--- a/.github/workflows/pr-to-slack.yml
+++ b/.github/workflows/pr-to-slack.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Send message to Slack
         env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           PR_TITLE: ${{ github.event.pull_request.title }}
           PR_BODY: ${{ steps.extract_body.outputs.body }}
         run: |
@@ -28,4 +28,4 @@ jobs:
                   "text": "'"$PR_BODY"'"
                 }
               ]
-            }' $SLACK_WEBHOOK
+            }' $SLACK_WEBHOOK_URL
