--- a/.github/workflows/pr-to-slack.yml
+++ b/.github/workflows/pr-to-slack.yml
@@ -10,7 +10,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
+      
+      - name: Extract PR description and convert img tags
+        id: extract-and-convert
+        run: |
+          PR_DESCRIPTION=$(jq -r .pull_request.body < "$GITHUB_EVENT_PATH")
+          # 使用正則表達式提取 <img> 標籤並轉換為 Slack 支持的格式
+          PR_DESCRIPTION=$(echo "$PR_DESCRIPTION" | perl -pe 's/<img[^>]+src="([^"]+)"[^>]*>/ ![image]($1) /g')
+          # echo "::set-output name=description::$PR_DESCRIPTION"
+          {
+            echo 'JSON_RESPONSE<<EOF'
+            echo $PR_DESCRIPTION
+	    echo EOF
+	  } >> "$GITHUB_ENV"
+	  
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@v2
         env:
@@ -69,7 +82,7 @@ jobs:
 			"fields": [
 				{
 					"type": "mrkdwn",
-					"text": "*Message*\n${{ github.event.pull_request.body }}"
+					"text": "*Message*\n${{ steps.extract-and-convert.outputs.JSON_RESPONSE }}"
 				}
 			]
 		}
