--- a/.github/workflows/pr-to-slack.yml
+++ b/.github/workflows/pr-to-slack.yml
@@ -20,7 +20,7 @@ jobs:
           # 置換 <img> 標籤並轉換為 Slack 支持的格式
           PR_DESCRIPTION=$(echo "$PR_DESCRIPTION" | perl -pe 's/<img[^>]+src="([^"]+)"[^>]*>/ <$1|image> /g')
           # 處理雙引號為單引號, 換行為轉為文字, 避免 slack api 錯誤
-          PR_DESCRIPTION=$(echo "$PR_DESCRIPTION" | perl -pe 's/"/'\''/g' | perl -pe 's/#{1,3} (.+)/\*($1)\*/g')
+          PR_DESCRIPTION=$(echo "$PR_DESCRIPTION" | perl -pe 's/"/'\''/g' | perl -pe 's/#{1,3} (.+)/\*$1\*/g' | perl -pe 's/\n/  /g') 
           # 這邊不能使用 set-output, 結果變數會只有第一行, 要這樣寫才能接受多行
           {
             echo 'JSON_RESPONSE<<EOF'
@@ -33,6 +33,7 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_USERNAME: 點對點 Github Action
+          SLACKIFY_MARKDOWN: true
           SLACK_CUSTOM_PAYLOAD: '{
     "username" : "點對點 Github Action 機器人",
     "icon_emoji" : ":chino-star:",
