--- a/.github/workflows/pr-to-slack.yml
+++ b/.github/workflows/pr-to-slack.yml
@@ -78,7 +78,7 @@ jobs:
                             "fields": [
                                 {
                                     "type": "mrkdwn",
-                                    "text": '"'${PR_DESCRIPTION}'"'
+                                    "text": "'"${PR_DESCRIPTION}"'"
                                 }
                             ]
                         }
