--- a/.github/workflows/pr-to-slack.yml
+++ b/.github/workflows/pr-to-slack.yml
@@ -34,7 +34,7 @@ jobs:
             - name: Slack Notification
               uses: rtCamp/action-slack-notify@v2
               env:
-                SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+                SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
                 SLACK_USERNAME: 點對點 Github Action
                 SLACK_CUSTOM_PAYLOAD: '
                     {
