--- a/.github/workflows/pr-to-slack.yml
+++ b/.github/workflows/pr-to-slack.yml
@@ -6,24 +6,28 @@ on:
 
 jobs:
     slackNotification:
+        if: ${{ github.event.label.name == '👀  Needs Review' }}
         name: Slack Notification
         runs-on: ubuntu-latest
         steps:
             # - uses: actions/checkout@v2
 
-            - name: Extract PR description and convert img tags
+            - name: Extract PR Description and convert img tags
               id: extract-and-convert
               env:
                   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
               run: |
                   PR_DESCRIPTION=$(jq -r .pull_request.body < "$GITHUB_EVENT_PATH")
+                  
                   # 僅擷取到 jira link
                   PR_DESCRIPTION=$(echo "$PR_DESCRIPTION" | perl -0777 -ne 'print $1 if /(## Service Name\s*.*https:\/\/kkday\.atlassian\.net\/.*?\n)/s')
+                  
                   # 置換 <img> 標籤並轉換為 Slack 支持的格式
                   PR_DESCRIPTION=$(echo "$PR_DESCRIPTION" | perl -pe 's/<img[^>]+src="([^"]+)"[^>]*>/ <$1|image> /g')
 
                   # 處理雙引號為單引號, 換行符號, 避免 slack api 錯誤
                   PR_DESCRIPTION=$(echo "$PR_DESCRIPTION" | perl -pe 's/"/'\''/g' | perl -pe 's/\r\n/\\n/g; s/\n/\\n/g;') 
+                  
                   # 這邊不能使用 set-output, 結果變數會只有第一行, 要這樣寫才能接受多行
                   {
                     echo 'JSON_RESPONSE<<EOF'
